# liblevenshtein-rust

./: .gitignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  COMPRESSED_SUFFIX_AUTOMATON_TODO.md  CONTRIBUTING.md  Cargo.toml  DAT_IMPLEMENTATION_COMPLETE.md  DAWG_OPTIMIZATION_ANALYSIS.md  FINAL_BACKEND_COMPARISON.md  FUTURE_ENHANCEMENTS.md  IN_PLACE_MUTATION_ANALYSIS.md  NEXT_STEPS.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PHASE2_COMPLETE.md  PHASE4_SMALLVEC_INVESTIGATION.md  PHASE5_PROFILING_VERIFICATION.md  PHASE5_STATEPOOL_RESULTS.md  PHASE6_ARC_PATH_RESULTS.md  README.md  REFACTORING_PLAN.md  UTF8_IMPLEMENTATION_STATUS.md  backend_comparison_results.txt  bench_results_arc_str.txt  bench_results_balanced.txt  bench_results_baseline.txt  bench_results_concurrent.txt  bench_results_dashmap.txt  bench_results_parking_lot.txt  benchmark_no_pgo.txt  benchmark_optimizations.sh  benchmark_results.txt  benchmark_results_phase6.txt  benchmark_with_pgo.txt  build.rs  build_baseline_no_pgo.txt  dat_fuzzy_matching_results.txt  dawg_benchmark_baseline.txt  dawg_benchmark_optimized.txt  (+11 more)
.githooks/: README.md  pre-commit
.github/workflows/: ci.yml  corpus-cache-setup.yml.snippet  nightly.yml  release.yml
benches/: auto_minimize_benchmark.rs  automaton_vs_linear_scan.rs  backend_comparison.rs  batch1_simd_benchmarks.rs  batch2a_integration_benchmarks.rs  batch2a_subsumption_benchmarks.rs  batch2b_edge_lookup_benchmarks.rs  benchmarks.rs  bloom_filter_benchmark.rs  compact_benchmark.rs  comprehensive_profiling.rs  concurrent_completion_benchmarks.rs  contextual_completion_benchmarks.rs  corpus_benchmarks.rs  dat_levenshtein_profiling.rs  dawg_benchmarks.rs  distance_benchmarks.rs  distance_profiling.rs  eviction_wrapper_benchmarks.rs  filtering_prefix_benchmarks.rs  fuzzy_map_benchmarks.rs  fuzzy_map_profiling.rs  fuzzy_multimap_profiling.rs  generalized_automaton_benchmarks.rs  generalized_memory_benchmarks.rs  hierarchical_scope_benchmarks.rs  matching_modes_comparison.rs  micro_benchmarks.rs  parameterized_vs_universal_comparison.rs  phonetic_acceptance_benchmarks.rs  phonetic_operations_benchmarks.rs  phonetic_position_skip_benchmark.rs  phonetic_rules.rs  policy_zero_cost.rs  pool_intersection_benchmarks.rs  prefix_profiling.rs  prefix_zipper_benchmarks.rs  profiling_benchmark.rs  query_iterator_benchmarks.rs  query_profiling.rs  (+15 more)
data/corpora/: README.md
docs/: BATCH2A_COMPLETE.md  BATCH2A_POSITION_SUBSUMPTION_SIMD.md  BATCH2B_PERFORMANCE_ANALYSIS.md  CODE_COMPLETION_GUIDE.md  CROSS_VALIDATION_BUG_REPORT.md  CROSS_VALIDATION_STATUS.md  CROSS_VALIDATION_TEST_COVERAGE.md  DAWG_OPTIMIZATION_OPPORTUNITIES.md  DYNAMIC_DAWG.md  EMPTY_STRING_FIX_COMPLETE.md  EVICTION_WRAPPER_OPTIMIZATION.md  FEATURES.md  GLOSSARY.md  GPU_ACCELERATION_ANALYSIS.md  HIERARCHICAL_CORRECTION_DESIGN.md  INDEX_BASED_QUERY_RESULTS.md  JAVA_COMPARISON.md  OPTIMIZATION_RESULTS.md  OPTIMIZATION_ROADMAP.md  OPTIMIZATION_SUMMARY.md  PATHMAP_THREAD_SAFETY.md  PATHNODE_OPTIMIZATION_RESULTS.md  PERFORMANCE.md  PERFORMANCE_ANALYSIS.md  PGO_IMPACT_ANALYSIS.md  PHASE4_BATCH1_COMPLETE.md  PHASE4_SIMD_COMPLETION_STATUS.md  PROJECT_COMPLETION_SUMMARY.md  PROTOBUF_SERIALIZATION.md  PUBLISHING.md  QUERY_ARC_ANALYSIS.md  README.md  README_ORG_MODE.md  RHOLANG_STRUCTURAL_CORRECTION.md  RHOLANG_STRUCTURAL_CORRECTION.org  SERIALIZATION_BENCHMARK_BASELINE.md  SERIALIZATION_OPTIMIZATIONS_APPLIED.md  SERIALIZATION_OPTIMIZATION_PLAN.md  convert_to_org_advanced.py
docs/algorithms/: DOCUMENTATION_INDEX.md  README.md
docs/archive/: README.md
docs/benchmarks/: BACKEND_COMPARISON_RESULTS.md  BACKEND_PERFORMANCE_COMPARISON.md  DAT_OPTIMIZATION_RESULTS.md  DAT_PERFORMANCE_ANALYSIS.md  DOUBLE_ARRAY_TRIE_ANALYSIS.md  OPTIMIZATION_RESULTS.md  OPTIMIZATION_SUMMARY.md  README.md  backend_comparison_6backends.txt  backend_comparison_optimized.txt  dat_benchmark_results.txt  dat_levenshtein_benchmark.txt  (+1 more)
examples/: advanced_contextual_filtering.rs  batch_operations.rs  builder_demo.rs  code_completion_demo.rs  compressed_suffix_demo.rs  contextual_completion.rs  contextual_filtering_optimization.rs  custom_substitutions.rs  custom_sync_strategy.rs  dawg_demo.rs  dawg_query_comparison.rs  debug_dat_construction.rs  debug_gjzhkidoa.rs  debug_ordered_query.rs  debug_query.rs  debug_rh_detailed.rs  debug_z_za.rs  debug_z_za_detailed.rs  dynamic_dawg_demo.rs  dynamic_dawg_unicode.rs  dynamic_dictionary.rs  fuzzy_cache_basic.rs  fuzzy_maps_code_completion.rs  hierarchical_scope_completion.rs  ordered_query_benchmark.rs  ordered_query_demo.rs  parallel_workspace_indexing.rs  phonetic_fuzzy_matching.rs  phonetic_iteration_analysis.rs  phonetic_matching.rs  phonetic_rewrite.rs  phonetic_slice_analysis.rs  position_skip_test.rs  profile.rs  profile_workload.rs  real_world_benchmark.rs  serialization.rs  simd_prototype.rs  spell_checker.rs  substring_search.rs  (+11 more)
proto/: liblevenshtein.proto
scripts/: download_corpora.sh  install-git-hooks.sh
src/: lib.rs
tests/: accessor_and_union_tests.rs  cache_wrapper_integration.rs  check_reverse_subsumption.rs  check_specific_subsumption.rs  cli_tests.rs  concurrency_test.rs  contextual_stress_test.rs  corpus_validation.rs  debug_merge_split.rs  debug_proptest_failure.rs  debug_test.rs  debug_unicode_empty_query.rs  debug_yu_uy_states.rs  deletion_test.rs  dictionary_iterator_tests.rs  draft_lifecycle.rs  dynamic_dawg_integration.rs  integration_tests.rs  large_distance_test.rs  manual_trace_transposition.rs  prefix_zipper_tests.rs  proptest_automaton_distance_cross_validation.rs  proptest_comprehensive.proptest-regressions  proptest_comprehensive.rs  proptest_distance_metrics.proptest-regressions  proptest_distance_metrics.rs  proptest_levenshtein.proptest-regressions  proptest_levenshtein.rs  proptest_skip_to_match.rs  proptest_subsumption_theorems.rs  proptest_transitions.rs  query_comprehensive_test.rs  repl_tests.rs  restricted_substitutions.rs  serialization_test.rs  suffix_automaton_integration.rs  test_dynamic_dawg_char.rs  test_empty_query.rs  test_pathmap_char.rs  test_utf8_char_level.rs  (+7 more)
(+670 files in other folders)
