[package]
name = "liblevenshtein"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Dylon Edwards <dylon.edwards@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/F1R3FLY-io/liblevenshtein-rust"
description = "Levenshtein/Universal Automata for approximate string matching using various dictionary backends"
keywords = ["levenshtein", "edit-distance", "spell-checking", "fuzzy-search", "automata"]
categories = ["algorithms", "data-structures", "text-processing"]
readme = "README.md"

[dependencies]
# PathMap as the primary dictionary backend
pathmap = { path = "../PathMap" }
# SmallVec for stack-allocated vectors (performance optimization)
smallvec = "1.13"
# Serialization support (optional)
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }
serde_json = { version = "1.0", optional = true }
prost = { version = "0.12", optional = true }
bytes = { version = "1.5", optional = true }
# CLI dependencies (optional)
clap = { version = "4.4", features = ["derive"], optional = true }
anyhow = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
prost-build = { version = "0.12", optional = true }

[lib]
name = "liblevenshtein"
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "micro_benchmarks"
harness = false

[[bench]]
name = "dawg_benchmarks"
harness = false

[[bench]]
name = "profiling_benchmark"
harness = false

[[bench]]
name = "threshold_analysis"
harness = false

[[bench]]
name = "threshold_tuning"
harness = false

[[bench]]
name = "serialization_benchmarks"
harness = false
required-features = ["serialization"]

[[bin]]
name = "liblevenshtein-cli"
path = "src/bin/liblevenshtein-cli.rs"
required-features = ["cli"]

[[example]]
name = "serialization"
required-features = ["serialization"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true  # Enable debug symbols for profiling

[profile.bench]
inherits = "release"

[features]
default = []
serialization = ["serde", "bincode", "serde_json"]
protobuf = ["prost", "bytes", "prost-build", "serialization"]
cli = ["clap", "anyhow"]
